2007-02-01  Danny Backx <dannybackx@users.sourceforge.net>

	* build-mingw32ce.sh, build-cegcc.sh : Add help text to explain
	command line build options.

2007-01-20  Danny Backx <dannybackx@users.sourceforge.net>

	* build-mingw32ce.sh, build-cegcc.sh (build_docs) : Copy
	some additional files that need to make it into an RPM.
	* scripts/linux/rpm-create-source.sh : create two different source tar
	files, each containing one SPEC file. For the cegcc and mingw32ce
	distributions.
	* scripts/linux/cegcc.spec, scripts/linux/mingw32ce.spec : these
	versions work.

2007-01-18  Danny Backx <dannybackx@users.sourceforge.net>

	* cegcc/importlibs/build.sh : add definition for mmtimer DLL.

2006-12-31  Danny Backx <dannybackx@users.sourceforge.net>

	* build-mingw32ce.sh, build-cegcc.sh (build_profile) : Copy the
	options from the mingw_runtime build, so src/profile/Makefile.in gets
	the right parameters and install stuff in the right place.

2006-12-30  Danny Backx <dannybackx@users.sourceforge.net>

	* build-mingw32ce.sh, build-cegcc.sh (build_profile) : Change the
	approach to deal with -DNO_UNDERSCORES so we keep CFLAGS free for use
	by the command line.

2006-12-24  Danny Backx <dannybackx@users.sourceforge.net>

	* build-mingw32ce.sh, build-cegcc.sh (build_profile) : Add.
	* build-mingw32ce.sh, build-cegcc.sh (build_gcc) : Add --with-headers
	option so -Dinhibit_libc isn't triggered.

2006-12-19  Pedro Alves  <pedro_alves@portugalmail.pt>

	* build-mingw32ce.sh (build-w32api): New function.
        Add w32api command line options that calls build-w32api.

2006-12-18  Danny Backx <dannybackx@users.sourceforge.net>

	* build-mingw32ce.sh, build-cegcc.sh (build_docs) : Add.

2006-11-18  Danny Backx <dannybackx@users.sourceforge.net>

	* build-mingw32ce.sh, build-cegcc.sh (build_gcc) : Work around
	gcc build system bug.

2006-10-27  Pedro Alves  <pedro_alves@portugalmail.pt>

	* build-mingw32ce.sh : Remove duplicated build_all function.